--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,50 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>ProjectAngular</title>
-  <base href="/">
+    <head>
+        <meta charset="utf-8">
+        <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="resume of a webdeveloper hafedh amri">
+        <meta name="author" content="Hafedh AMRI">
+
+        <title>Resume - Start Bootstrap Theme</title>
+
+        <!-- Bootstrap core CSS -->
+        <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+        <!-- Custom fonts for this template -->
+        <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
+        <!--    <link href="../assets/vendor/font-awesome/css/font.googleapis1.css" rel="stylesheet">
+            <link href="../assets/vendor/font-awesome/css/font.googleapis2.css" rel="stylesheet">-->
+        <link href="../assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+        <link href="../assets/vendor/devicons/css/devicons.min.css" rel="stylesheet">
+        <link href="../assets/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+
+        <!-- Custom styles for this template -->
+        <link href="../assets/css/resume.min.css" rel="stylesheet">
+
+    </head>
+
+    <body id="page-top">
+
+    <app-root></app-root>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="../assets/vendor/jquery/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
+    <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="../assets/vendor/jquery-easing/jquery.easing.min.js"></script>
+
+    <!-- Custom scripts for this template -->
+    <script src="../assets/js/resume.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
 </body>
 </html>
