--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         <meta name="description" content="resume of a webdeveloper hafedh amri">
         <meta name="author" content="Hafedh AMRI">
 
-        <title>Resume - Start Bootstrap Theme</title>
+        <title>Hafedh AMRI - webdeveloper</title>
 
         <!-- Bootstrap core CSS -->
         <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
