--- a/src/index.html
+++ b/src/index.html
@@ -29,14 +29,11 @@
         <link href="../assets/css/resume.min.css" rel="stylesheet">
 
     </head>
-
     <body id="page-top">
-
     <app-root></app-root>
-
     <!-- Bootstrap core JavaScript -->
     <script src="../assets/vendor/jquery/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>-->
     <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Plugin JavaScript -->
@@ -44,7 +41,7 @@
 
     <!-- Custom scripts for this template -->
     <script src="../assets/js/resume.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+    <!--<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>-->
+    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>-->
 </body>
 </html>
