--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <base href="/">
+        <base href="https://spidrotech.github.io/resume/">
         
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -30,7 +30,6 @@
 
     </head>
     <body id="page-top">
-        <!--{{ site.baseurl }}-->
     <app-root></app-root>
     <!-- Bootstrap core JavaScript -->
     <script src="../resume/assets/vendor/jquery/jquery.min.js"></script>
