--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <base href="/resume/">
+        <base href="/">
         
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -30,6 +30,7 @@
 
     </head>
     <body id="page-top">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="/assets/img/hafedh1.jpg" alt="">
     <app-root></app-root>
     <!-- Bootstrap core JavaScript -->
     <script src="../assets/vendor/jquery/jquery.min.js"></script>
